# rustsn

./: .gitignore  Cargo.toml  README.md  prompt_ai.txt
java/: prompt.txt
prompt/: java.txt  javascript.txt  kotlin.txt  php.txt  python.txt  rust.txt  scala.txt  swift.txt  typescript.txt
rust/: logic.md  prompt.txt
src/: build_tool.rs  cache.rs  file_explorer.rs  java.rs  javascript.rs  kotlin.rs  llm_api.rs  llm_parser.rs  llm_prompt.rs  llm_response.rs  main.rs  php.rs  python.rs  rust.rs  scala.rs  state_machine.rs  state_machine_app.rs  swift.rs  typescript.rs  utils.rs  vector_utils.rs
test_data/: java_create_1.txt  java_create_2.txt  java_create_3.txt  java_create_4.txt  java_create_5.txt  rust_create_1.txt  rust_create_10.txt  rust_create_2.txt  rust_create_3.txt  rust_create_4.txt  rust_create_5.txt  rust_create_6.txt  rust_create_7.txt  rust_create_8.txt  rust_create_9.txt
