[package]
name = "rustsn"
version = "0.14.0"
edition = "2021"
authors = ["Evgeny Igumnov <igumnovnsk@gmail.com>"]
repository = "https://github.com/evgenyigumnov/rustsn"
license-file = "LICENSE"

[dependencies]

serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
reqwest = {version = "0.11.22", features = ["blocking", "json"]}
clap = { version = "4.5.18", features = ["derive"] }
regex = "1.10.6"
