[package]
name = "rustsn"
version = "0.15.0"
edition = "2021"
authors = ["Evgeny Igumnov <igumnovnsk@gmail.com>"]
repository = "https://github.com/evgenyigumnov/rustsn"
license-file = "LICENSE"

[[bin]]
name = "rustsn"
path = "src/main.rs"

[dependencies]
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
clap = { version = "4.5.18", features = ["derive"] }
regex = "1.10.6"
langchain-rust = "4.4.2"
tokio = { version = "1.39.3", features = ["full"] }
