[package]
name = "rustsn"
version = "0.21.0"
edition = "2021"
authors = ["Evgeny Igumnov <igumnovnsk@gmail.com>"]
repository = "https://github.com/evgenyigumnov/rustsn"
license = "MIT OR Apache-2.0"
description = "This Rust-based tool generates, compiles, and tests code using LLMs, resolves dependencies, and provides explanations of existing code through embeddings."
keywords = ["llm", "ai", "cli", "code-generation", "code-embedding"]
categories = ["development-tools"]
[[bin]]
name = "rustsn"
path = "src/main.rs"

[dependencies]

serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
reqwest = {version = "0.11.22", features = ["blocking", "json"]}
clap = { version = "4.5.18", features = ["derive"] }
regex = "1.10.6"
bincode = { version = "2.0.0-rc.3" }
once_cell = "1.20.2"